--- a/src/InfinitEID-card-management/config/config.yaml
+++ b/src/InfinitEID-card-management/config/config.yaml
@@ -2,12 +2,12 @@ LOG_APDU: True
 CARD_CONNECTION_TIMEOUT_SECONDS: 10
 
 CARD_CERT_VALIDITY_DAYS: 90
-ROOT_CA_DIRECTORY_FULL_PATH: "/Users/petr/Developer/Repos/web-eid-nextcloud/InfinitEID/src/InfinitEID-card-management/data"
+ROOT_CA_DIRECTORY_FULL_PATH: "./data"
 
 # PIN values are integers here, but
 # are translated and saved to card as string/ASCII values
 ADMIN_PIN: [9, 8, 7, 6, 5, 4]
 
-NEXTCLOUD_ID: "ncadmin"
+NEXTCLOUD_ID: "testuser"
 USER_AUTH_PIN: [1, 2, 3, 4]
 USER_SIGN_PIN: [1, 2, 3, 4, 5, 6]
